# Coach_Flow

./: .gitignore  README.md  Trucs à faire.docx  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
scripts/: data_fetcher.py  func_streamlit.py  garmin_connect.py  pipeline.py
streamlit/: app.py
streamlit/pages/: home.py  performance.py
streamlit/views/: home.py  map.py  performance.py  recommandation.py
